Add forwardfor to thread external IP addresses through to gantry container.

--- a/proxy/haproxy.tmpl
+++ b/proxy/haproxy.tmpl
@@ -11,6 +11,7 @@ global
 
 defaults
     option abortonclose
+    option forwardfor
     
     log global
 {% for port, route in port_routes.items() %}
