--- a/proxy/haproxy.tmpl
+++ b/proxy/haproxy.tmpl
@@ -12,6 +12,7 @@ global
 defaults
     option abortonclose
     option forwardfor
+    option httpclose
     
     log global
 {% for port, route in port_routes.items() %}
